<?xml version="1.0"?>
<package format="3">
  <name>gps_umd</name>
  <version>1.0.10</version>
  <description>gps_umd metapackage</description>

  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
  <author email="preed@swri.org">P. J. Reed</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/gps_umd</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gpsd_client</exec_depend>
  <exec_depend>gps_msgs</exec_depend>
  <exec_depend>gps_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
